force-app/main/default/objects/public_badge__x/public_badge__x.object-meta.xml
<CustomObject>
    <description>public$badge</description>
    <externalDataSource>odata_badges</externalDataSource>
    <externalName>public$badge</externalName>
    <label>public$badge</label>
    <pluralLabel>public$badge</pluralLabel>
</CustomObject>