force-app/main/default/objects/public_badge__x/fields/badge_status__c.field-meta.xml
<CustomField>
    <fullName>badge_status__c</fullName>
    <description>badge_status</description>
    <externalDeveloperName>badge_status</externalDeveloperName>
    <label>badge_status</label>
    <length>35</length>
    <type>Text</type>
</CustomField>