force-app/main/default/objects/public_badge__x/fields/badge_url__c.field-meta.xml
<CustomField>
    <fullName>badge_url__c</fullName>
    <description>badge_url</description>
    <externalDeveloperName>badge_url</externalDeveloperName>
    <label>badge_url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>