force-app/main/default/objects/public_badge__x/fields/creation_date__c.field-meta.xml
<CustomField>
    <fullName>creation_date__c</fullName>
    <description>creation_date</description>
    <externalDeveloperName>creation_date</externalDeveloperName>
    <label>creation_date</label>
    <type>DateTime</type>
</CustomField>