force-app/main/default/objects/public_badge__x/fields/guest_company__c.field-meta.xml
<CustomField>
    <fullName>guest_company__c</fullName>
    <description>guest_company</description>
    <externalDeveloperName>guest_company</externalDeveloperName>
    <label>guest_company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>