force-app/main/default/objects/public_badge__x/fields/guest_firstname__c.field-meta.xml
<CustomField>
    <fullName>guest_firstname__c</fullName>
    <description>guest_firstname</description>
    <externalDeveloperName>guest_firstname</externalDeveloperName>
    <label>guest_firstname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>