force-app/main/default/objects/public_badge__x/fields/guest_id__c.field-meta.xml
<CustomField>
    <fullName>guest_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>guest_id</description>
    <externalDeveloperName>guest_id</externalDeveloperName>
    <label>guest_id</label>
    <referenceTo>Guest__c</referenceTo>
    <relationshipName>public_odata_badge</relationshipName>
    <type>Lookup</type>
</CustomField>