force-app/main/default/objects/public_badge__x/fields/guest_lastname__c.field-meta.xml
<CustomField>
    <fullName>guest_lastname__c</fullName>
    <description>guest_lastname</description>
    <externalDeveloperName>guest_lastname</externalDeveloperName>
    <label>guest_lastname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>