force-app/main/default/objects/public_badge__x/fields/host_firstname__c.field-meta.xml
<CustomField>
    <fullName>host_firstname__c</fullName>
    <description>host_firstname</description>
    <externalDeveloperName>host_firstname</externalDeveloperName>
    <label>host_firstname</label>
    <length>35</length>
    <type>Text</type>
</CustomField>