force-app/main/default/objects/public_badge__x/fields/host_lastname__c.field-meta.xml
<CustomField>
    <fullName>host_lastname__c</fullName>
    <description>host_lastname</description>
    <externalDeveloperName>host_lastname</externalDeveloperName>
    <label>host_lastname</label>
    <length>35</length>
    <type>Text</type>
</CustomField>