force-app/main/default/objects/public_badge__x/fields/id__c.field-meta.xml
<CustomField>
    <fullName>id__c</fullName>
    <description>id</description>
    <externalDeveloperName>id</externalDeveloperName>
    <label>id</label>
    <length>35</length>
    <type>Text</type>
</CustomField>