force-app/main/default/objects/public_badge__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>guest_id__c</columns>
    <columns>guest_lastname__c</columns>
    <columns>guest_firstname__c</columns>
    <columns>badge_status__c</columns>
    <columns>ExternalId</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>